<resources>
    <string name="app_name">The Tracks App</string>
    <string name="app_version">Version 1.0 (20)</string>

    <string name="help_url">https://biocollect.ala.org.au/trackshub/staticPage/index?page=Tracker_Help</string>
    <string name="about_url">https://biocollect.ala.org.au/trackshub/staticPage/index?page=About</string>
    <string name="partners_url">https://biocollect.ala.org.au/trackshub/staticPage/index?page=Partners</string>
    <string name="contact_us_url">http://www.ala.org.au/about-the-atlas/contact-us/</string>

    <string name="user_project_parameter">USER_PROJECT</string>
    <string name="project_id_parameter">PROJECT_ID</string>
    <string name="project_name_parameter">PROJECT_NAME</string>
    <string name="add_animal_parameter">ADD_ANIMAL</string>
    <string name="primary_key_parameter">PRIMARY_KEY</string>
    <string name="primary_keys_parameter">PRIMARY_KEYS</string>
    <string name="practise_parameter">PRACTISE_KEYS</string>
    <string name="acquire_GPS_location_parameter">ACQUIRE_GPS_LOCATION</string>
    <string name="food_plant_parameter">FOOD_PLANT_KEYS</string>
    <string name="species_filter_parameter">SPECIES_FILTER_KEY</string>
    <string name="track_model_parameter">TRACK_MODEL</string>
    <string name="sighting_model_parameter">SIGHTING_MODEL</string>
    <string name="photo_path_parameter">PHOTO_PATH</string>

    <string name="project_type">CLC 2Ha Track Plot</string>

    <string name="project_initiator">biocollect</string>
    <string name="project_soft_option">nameSort</string>

    <string name="title_activity_main">The Tracks App</string>

    <string name="about_title">About Tracks App</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="contact">Contact</string>
    <string name="add_track">Add a New Track</string>
    <string name="practise_track">Practice Tracking</string>
    <string name="my_track">My Tracks</string>
    <string name="review_track">Review Tracks</string>
    <string name="partners">Partners</string>
    <string name="help">Help</string>
    <string name="update_location">Update Location</string>
    <string name="offline_setting">Offline Settings</string>
    <string name="no_animal_record">No sightings have been recorded yet</string>
    <string name="edit_track">Edit Track</string>

    <string name="choose_project">Choose Project</string>
    <string name="terms_condition">Do you agree to the terms of use for this app?</string>
    <string name="choose_language">Choose Language</string>
    <string name="data_share">Do you agree to share data from this project?</string>

    <string name="tracker">Tracker</string>
    <string name="map">Map</string>
    <string name="country">Country</string>
    <string name="animals">Animals</string>
    <string name="later">Later</string>
    <string name="food_plant_separator">;&#160;</string>

    <string name="unknown_species">Add \"%1$s\" as a species</string>
    <string name="good_day_message">Hello %1$s</string>
    <string name="logout_title">Are you sure you want to logout?</string>
    <string name="logout_message">You will not be able to log back in without an active Internet connection.\n\nPlease enter your password to proceed.\n\n%1$s</string>
    <string name="start_gps">Start GPS</string>
    <string name="stop_gps">Stop GPS</string>
    <string name="add_country_photo">Add Country Photo</string>
    <string name="add_sign_photo">Add Sign/Animal Photo</string>
    <string name="survey_type">Survey Type</string>
    <string name="site_type">Site choice</string>
    <string name="country_type">Country Type</string>
    <string name="add_photo">Add Photo</string>
    <string name="ground_type">How soft is the ground for leaving tracks?</string>
    <string name="detailed_habitat">Detailed habitat</string>
    <string name="vegetation">Vegetation Type</string>
    <string name="countryType">Country Type</string>
    <string name="tracking_event_type">Tracking event type</string>
    <string name="trackability">Trackability</string>
    <string name="how_clear_ground">How much clear ground for tracking?</string>
    <string name="visibility">Visibility</string>
    <string name="weather_tracking">Weather?</string>
    <string name="fire">How long since fire?</string>
    <string name="disturbance">Have tracks been disturbed?</string>
    <string name="country_name">Country Name</string>
    <string name="sign_latitude">Latitude of sign</string>
    <string name="sign_longitude">Longitude of sign</string>
    <string name="event_date_hint">Tracking event date <sup><small>*</small></sup></string>
    <string name="event_start_time_hint">Tracking event start time <sup><small>*</small></sup></string>
    <string name="event_end_time_hint">Tracking event finish time</string>
    <string name="centroid_longitude">Centroid Longitude</string>
    <string name="centroid_latitude">Centroid Latitude</string>
    <string name="organisation_name">Organisation Name <sup><small>*</small></sup></string>
    <string name="lead_tracker">Lead Tracker <sup><small>*</small></sup></string>
    <string name="other_tracker">Other Tracker Names</string>
    <string name="comment">Comments</string>
    <string name="other_setting">Other Settings</string>
    <string name="group_selfie">Group Selfie</string>
    <string name="kind_of_animal">Kind of Animal</string>
    <string name="size">Size</string>
    <string name="covering">Covering</string>
    <string name="animal">Animals</string>
    <string name="animal_name">Animal Name</string>
    <string name="what_animal">What animal did you see? <sup><small>*</small></sup></string>
    <string name="what_you_see">What sign did you see?</string>
    <string name="how_recent">How old is the sign?</string>
    <string name="how_old_animal">How old is the animal?</string>
    <string name="offline_species">Offline Settings</string>
    <string name="search_and_add">Search and Add</string>
    <string name="search_and_add_description">You can search species by name and download them one by one</string>
    <string name="download_from_map">Download by Location</string>
    <string name="download_from_map_description">You can download all the species by selecting a region from map</string>
    <string name="available_species">Available Species</string>
    <string name="available_species_description">The list of downloaded/offline species</string>
    <string name="group_species">Download Group Species</string>
    <string name="select_project">Select Your Project</string>
    <string name="food_plant">Food Plant</string>
    <string name="no_selected_project">Tap here to select a project</string>
    <string name="no_food_plant">Tap here to select food plants</string>
    <string name="group_species_description">You can download a group of species from predefined species chunks</string>
    <string name="number_of_location">Number of Locations: %1$d</string>
    <string name="delete_species_confirmation">Are you sure you want to delete this species?</string>
    <string name="delete_all_species_confirmation">Are you sure you want to delete all the species?</string>
    <string name="add_all_species_confirmation">Are you sure you want to save all the species offline?</string>
    <string name="delete_species_title">Delete Species</string>
    <string name="add_all_species_title">Add Species</string>
    <string name="duplicate_entry">This species is already in offline.</string>
    <string name="download_service_started">The download has been started.</string>
    <string name="download_service_complete">The species have been saved offline.</string>
    <string name="download_interrupted">Download has been interrupted</string>
    <string name="animal_delete">Would you like to delete this animal from this list?</string>
    <string name="animal_delete_title">Delete Animal</string>
    <string name="adult_size">Adult Size</string>
    <string name="body_cover">Body Cover</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="fur">Fur</string>
    <string name="scales">Scales</string>
    <string name="spikes">Spikes</string>
    <string name="feathers">Feathers</string>
    <string name="species_filter_title">Species Filter</string>
    <string name="change_project_message">If you change the project selection, all your draft items (if there is any) will be uploaded with newly selected project.</string>
    <string name="project_selection_message">Please select an active project from Settings in order to submit Tracks.</string>
    <string name="project_selection_title">Select Project</string>
    <string name="project_id_missing">This project is not active at this moment.</string>
    <string name="at_least_two_coordinates">You need at least two locations.</string>
    <string name="track_save_title">Save Track</string>
    <string name="track_save_message">Would you like to save the track information now? It will be saved locally in Review Tracks and you can modify the information later.</string>
    <string name="add_gps_location_in_edit">Would you like to continue the track in the survey?</string>
    <string name="gps_edit_title">Continue Track</string>
    <string name="map_upload_fail">Submission failed, please try again later (Error code - MAP01).</string>
    <string name="country_photo_upload_fail">Submission failed, please try again later (Error code - COU01).</string>
    <string name="species_photo_upload_fail">Submission failed, please try again later (Error code - SPE01).</string>
    <string name="track_upload_fail">Submission failed, please try again later (Error code - TRA01).</string>
    <string name="authentication_error">You are not authorised to submit tracks, please contact our support team at biocollect-support@ala.org.au</string>
    <string name="upload_start">%1$s track is being uploaded.</string>
    <string name="upload_one_success">%1$s track has been uploaded successfully.</string>
    <string name="upload_all_success">Upload Task is finished.</string>
    <string name="upload_error">Error occurred while uploading %1$s track</string>
    <string name="successful_submit">Successfully submitted</string>
    <string name="successful_local_save">Successfully saved under review tracks.</string>
    <string name="draft_track_plural">Following %1$d tracks are not yet submitted to the server</string>
    <string name="draft_track_singular">Following %1$d track is not yet submitted to the server</string>
    <string name="save_locally_message">Your track information has been saved in %1$s</string>

    <string name="location_found_plural">%1$d locations are recorded.</string>
    <string name="location_found_singular">1 location is recorded.</string>

    <string name="species_select">Please add a species from the Animal tab. </string>
    <string name="lead_tracker_missing_error">Lead Tracker is missing in Tracker Tab.</string>
    <string name="map_location_missing_error">Please wait till the application gets at least one location.</string>
    <string name="event_date_missing_error">Tracking Event date is missing in Map Tab.</string>
    <string name="event_time_missing_error">Tracking Start Time is missing in Map Tab.</string>
    <string name="organisation_name_missing_error">Organisation name is missing in Tracker Tab.</string>

<!--    <string name="biocollect_url">https://biocollect-test.ala.org.au/</string>
    <string name="ecodata_url">https://ecodata-test.ala.org.au/</string>

    <string name="survey_entry_url">https://biocollect-test.ala.org.au/bioActivity/mobileCreate/%1$s</string>
    <string name="sighting_edit_url">https://biocollect-test.ala.org.au/bioActivity/mobileEdit/%1$s?mobile=true</string>
    <string name="sighting_detail_url">https://biocollect-test.ala.org.au/bioActivity/index/%1$s?mobile=true</string>-->
</resources>
