<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/operation"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />

        <item
            android:id="@+id/nav_add_track"
            android:icon="@drawable/animal_track"
            android:title="@string/add_track" />

        <item
            android:id="@+id/nav_practise_track"
            android:icon="@drawable/animal_track"
            android:title="@string/practise_track" />

        <item
            android:id="@+id/nav_review_track"
            android:icon="@drawable/animal_track"
            android:title="@string/review_track" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_36dp"
            android:title="@string/setting" />

    </group>


    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="Logout" />
        </menu>
    </item>

    <group
        android:id="@+id/contact"
        android:checkableBehavior="none">
        <item android:title="@string/app_name">
            <menu>
                <item
                    android:id="@+id/nav_help"
                    android:icon="@drawable/ic_info_outline_black_24dp"
                    android:title="@string/help" />

                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_mail_outline_black_24dp"
                    android:title="Contact Us" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/version"
        android:checkableBehavior="none">
        <item
            android:icon="@drawable/ic_stat_bilby_blitz"
            android:title="@string/app_version" />

    </group>
</menu>
