<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/select"
            android:padding="@dimen/row_padding_smaller"
            android:text="@string/species_filter_title"
            android:textStyle="bold" />

        <Button
            android:id="@+id/done"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/done"
            android:textSize="@dimen/default_input_font_size"
            android:textStyle="bold" />
    </RelativeLayout>


    <TextView
        android:id="@+id/offlineHeading"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/heading_background"
        android:paddingBottom="@dimen/heading_top_margin"
        android:paddingLeft="@dimen/heading_left_margin"
        android:paddingRight="@dimen/heading_left_margin"
        android:paddingTop="@dimen/heading_top_margin"
        android:text="@string/adult_size"
        android:textSize="@dimen/default_input_font_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/checkbox_left_margin"
        android:layout_marginTop="2dp"
        android:text="@string/large"
        android:textSize="@dimen/default_input_font_size" />

    <CheckBox
        android:id="@+id/checkBoxMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/checkbox_left_margin"
        android:layout_marginTop="2dp"
        android:text="@string/medium"
        android:textSize="@dimen/default_input_font_size" />

    <CheckBox
        android:id="@+id/checkBoxSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/checkbox_left_margin"
        android:layout_marginTop="2dp"
        android:text="@string/small"
        android:textSize="@dimen/default_input_font_size" />

    <TextView
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/heading_background"
        android:paddingBottom="@dimen/heading_top_margin"
        android:paddingLeft="@dimen/heading_left_margin"
        android:paddingRight="@dimen/heading_left_margin"
        android:paddingTop="@dimen/heading_top_margin"
        android:text="@string/body_cover"
        android:textSize="@dimen/default_input_font_size"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxFur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/checkbox_left_margin"
        android:layout_marginTop="2dp"
        android:text="@string/fur"
        android:textSize="@dimen/default_input_font_size" />

    <CheckBox
        android:id="@+id/checkBoxFeathers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/checkbox_left_margin"
        android:layout_marginTop="2dp"
        android:text="@string/feathers"
        android:textSize="@dimen/default_input_font_size" />
</LinearLayout>